--- a/api-2.0/package.json
+++ b/api-2.0/package.json
@@ -23,7 +23,10 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.2.0",
+    "node-gyp": "^9.3.1",
     "npm": "^6.14.6",
+    "protobufjs": "^6.11.3",
+    "rebuild": "^0.1.2",
     "save": "^2.4.0"
   }
 }
